# urban_mind_agents

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  server.py  test_agents.py
.claude/: settings.local.json
config/: implicit_rules.yaml  settings.yaml
docs/: SmartRoute Agent — 产品需求文档（PRD）.md  SmartRoute Agent 系统 — 全 Agent 详细技术方案文档.md
models/: coarse_ranker.txt
scripts/: test_full_pipeline.py  test_transport_full.py  test_transport_modes.py  test_transport_simple.py  train_coarse_ranker.py
src/smartroute/: __init__.py  main.py
src/smartroute/agents/: base.py
src/smartroute/agents/intent/: __init__.py  agent.py  ambiguity.py  extractor.py  rules.py
src/smartroute/agents/presentation/: __init__.py  agent.py  comparison.py  hints.py  reason_generator.py
src/smartroute/agents/profile/: __init__.py  agent.py  builder.py  cold_start.py
src/smartroute/agents/retrieval/: __init__.py  agent.py  ranker.py  retriever.py
src/smartroute/agents/route/: __init__.py  agent.py  multi_plan.py  queue_predictor.py  solver.py
src/smartroute/agents/ugc/: __init__.py  agent.py  cache.py  llm_channel.py  nlp_analyzer.py
src/smartroute/api/routes/: __init__.py  plan.py  user.py
src/smartroute/core/: __init__.py  config.py  exceptions.py  logging.py  utils.py
src/smartroute/mock/: __init__.py  data.py  services.py
src/smartroute/orchestrator/: __init__.py  fallback.py  graph.py  router.py  session.py
src/smartroute/schemas/: __init__.py  intent.py  poi.py  profile.py  response.py  route.py  state.py
src/smartroute/services/: __init__.py
src/smartroute/services/llm/: __init__.py  embedding.py  router.py
src/smartroute/services/map/: __init__.py  amap.py
src/smartroute/services/poi/: __init__.py  dianping.py
src/smartroute/services/profile/: __init__.py  mock_service.py  templates.py
src/smartroute/storage/: __init__.py
src/smartroute/storage/cache/: __init__.py  redis.py
src/smartroute/storage/vector/: __init__.py  milvus.py
static/: index.html
tests/: conftest.py
tests/agents/: test_intent_agent.py  test_presentation_agent.py  test_profile_agent.py  test_retrieval_agent.py  test_route_planning_agent.py  test_ugc_insight_agent.py
tests/orchestrator/: test_orchestrator.py
tests/schemas/: test_schemas.py
